RESOLVED FIXED143666
[Win] Incorrect parameter order in call to WebView::repaint.
https://bugs.webkit.org/show_bug.cgi?id=143666
Summary [Win] Incorrect parameter order in call to WebView::repaint.
peavo
Reported 2015-04-13 06:41:46 PDT
The 'immediate' default parameter has been forgotten.
Attachments
Patch (2.22 KB, patch)
2015-04-13 06:44 PDT, peavo
bfulgham: review+
peavo
Comment 1 2015-04-13 06:44:51 PDT
Brent Fulgham
Comment 2 2015-04-13 08:48:14 PDT
Comment on attachment 250636 [details] Patch Yikes! Thank you for finding this! r=me.
peavo
Comment 3 2015-04-13 08:55:46 PDT
(In reply to comment #2) > Comment on attachment 250636 [details] > Patch > > Yikes! Thank you for finding this! r=me. Thanks for reviewing :)
peavo
Comment 4 2015-04-13 09:25:27 PDT
Note You need to log in before you can comment on or make changes to this bug.